examples/nginx/3-public-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-myapp
  namespace: nginx-example
spec:
  ingressClassName: external-nginx
  rules:
    - host: public.lukakrapic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
