examples/nginx/simple-nginx.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-example-simple-nginx


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
  namespace: nginx-example-simple-nginx
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: echoserver
          image: ealen/echo-server
          ports:
            - name: http
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: nginx-example-simple-nginx
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
  selector:
    app: myapp


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-myapp
  namespace: nginx-example-simple-nginx
spec:
  ingressClassName: external-nginx
  rules:
    - host: public.lukakrapic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: private-myapp
  namespace: nginx-example-simple-nginx
spec:
  ingressClassName: internal-nginx
  rules:
    - host: private.lukakrapic.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 8080
